# sparky-ai

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_DIAGNOSTIC_DUMP.md  AUTONOMOUS_EXECUTION_SUMMARY.md  CEO_SESSION_PROGRESS.md  CLAUDE.md  CODEBASE_PLAN.md  LOOKAHEAD_BUG_SUMMARY.md  OVERSIGHT_BOOTSTRAP.md  OVERSIGHT_SUMMARY.md  README.md  RESEARCH_AGENT.md  SWEEP_STATUS.md  prove_bug.py  pyproject.toml  send_bug_report_to_ceo.py  test_momentum_bug.py  validate_data_and_lookahead.py  validate_feature_engineering.py
.claude/: settings.json  settings.local.json
agents/: ARCHITECTURE_DIAGRAM.txt  CEO_AGENT.md  CEO_STARTUP_CHECKLIST.md  COORDINATION_PROTOCOL.md  DATA_ENGINEER_AGENT.md  QUICK_START.md  README.md  SYSTEM_SUMMARY.md  VALIDATION_AGENT.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configs/: active_model.yaml  data_sources.yaml  holdout_policy.yaml  onchain_screening.yaml  research_strategy.yaml  resource_limits.yaml  secrets.example.yaml  system.yaml  trading_rules.yaml
coordination/: CEO_INBOX.md  CHECKPOINT_SYSTEM.md  README.md  STRATEGY_REPORT.md  TASK_ASSIGNMENTS.md  TASK_CONTRACTS.md  __init__.py  agent_registry.py  cli.py  coordination_api.py  inbox_manager.py  task_manager.py
data/: data_manifest.json
directives/: 20260218_broad_exploration.yaml  20260218_btc_deep.yaml  20260218_eth_strategies.yaml  active.yaml  baseline_reconciliation.yaml  example.yaml  layer4_sizing_donchian_20260218.yaml  regime_donchian.yaml
docs/: FULL_GUIDELINES.md
reports/: p002_infrastructure_audit.md
results/: CROSS_ASSET_FETCH_REPORT.md  FINAL_SUMMARY_OPTIONS_1_2_3.md  RBM_REVIEW_2026-02-16.md  TIME_TRACKING.md  VALIDATION_COMPLETE.md  contract_004_dsr_analysis.json  contract_005_audit.md  contract_005_summary.md  contract_005_validation.md  contract_005_validation_raw.json  ensemble_results.json  ensemble_summary.md  ensemble_v2_results.json  ensemble_v3_results.json  feature_importance.json  fetch_summary.json  fetch_summary_crossasset.json  guardrail_log.jsonl  novel_exploration_summary.md  novel_results.json  novel_v2_results.json  phase2_3_log.txt  phase4_log.txt  regime_detection_research_summary.md  regime_results.json  regime_summary.md  research_portfolio.json  sweep_analysis_20260216.txt  sweep_expanded_progress.csv  sweep_metrics.json  sweep_progress.csv  sweep_progress_contract004.csv  sweep_results.json  sweep_stage1_summary.json  sweep_summary.md  sweep_v2_progress.csv  sweep_v2_stage1.json  untagged_sweep_runs.json
roadmap/: 00_STATE.yaml  01_DECISIONS.md  02_RESEARCH_LOG.md  11_SONNET_HANDOFF.md  20_DATA_EXPANSION_PLAN.md  21_ALTERNATIVE_DATA_PLAN.md  22_FEATURE_ENGINEERING_STRATEGY.md  30_PHASE_3_VALIDATION_SUMMARY.md  31_VALIDATION_DIRECTIVE.md  32_AUDIT_RESPONSE_SUMMARY.md  40_CRITICAL_FINDINGS.md  41_DATA_SNOOPING_ISSUE.md  43_BUG_REPORT_LOOKAHEAD_BIAS.md  51_PHASE2_3_FINAL_REPORT.md  90_CEO_INBOX.md  91_TASK_ASSIGNMENTS.md  99_CURRENT_STATUS.md  CEO_INBOX.md  CRITICAL_FINDINGS.md  DECISIONS.md  DEPLOYMENT_DECISION.md  FEATURE_EXPANSION_PLAN.md  LEAKAGE_RESOLUTION.md  ML_UNDERPERFORMANCE_ANALYSIS.md  PHASE1_RESULTS.md  PHASE_2_REGIME_PLAN.md  PHASE_3_VALIDATION_SUMMARY.md  RESEARCH_LOG.md  STATE.yaml  (+3 more)
(+460 files in other folders)
