[project]
name = "sparky-ai"
version = "0.1.0"
description = "Autonomous crypto quantitative research and trading system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "torch>=2.4",
    "wandb>=0.18",
    "pydantic>=2.9",
    "ccxt>=4.4",
    "coinmetrics-api-client>=2024.10",
    "requests>=2.32",
    "pandas_ta>=0.3.14b",
    "pyarrow>=17.0",
    "pyyaml>=6.0",
    "optuna>=4.0",
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
